Prevent re sizing of text area
This property does nothing unless the overflow property is something other than visible, which is the default for most elements. So generally to use this, you'll have to set something like overflow: scroll;

Quote by Chris Coyier, 

http://css-tricks.com/almanac/properties/r/resize/

--- a/less/forms.less
+++ b/less/forms.less
@@ -154,8 +154,10 @@ output {
     height: auto;
   }
 }
-
-
+//The following CSS rule disables resizing behavior for textarea elements
+textarea {
+    resize: none;
+}
 // Search inputs in iOS
 //
 // This overrides the extra rounded corners on search inputs in iOS so that our
